librbd: do not return a failure if a peer cannot be notified of update

Maintenance ops that fail to notify a peer of the update should not
report a failure to the original user.

Fixes: http://tracker.ceph.com/issues/15351
Signed-off-by: Jason Dillaman <dillaman@redhat.com>